replace bad bolding

--- a/app/content/categories/cookware.mdx
+++ b/app/content/categories/cookware.mdx
@@ -15,7 +15,7 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
 |--------------|------------|-------------|---------------|------|
-| Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible 100% cast iron. This skillet can literally last *generations* – one Redditor restoring an 1850s cast iron pan noted, *"a cast iron pan will last generations"* ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). Lodge's modern pans are no different. They come pre-seasoned, and the seasoning only gets better and more non-stick with use. Unlike cheap pans that warp or coatings that peel, cast iron actually **improves** over time. It handles any heat source (stovetop, oven, grill, campfire) and can be revived even if rusted. Many people are still using Lodge pans handed down from grandparents – a true buy-it-for-life item ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). And Lodge stands behind their quality (they unofficially assist customers with issues ([[PDF] There is not a written warranty for Lodge Cast Iron cookware](https://images.thdstatic.com/catalog/pdfImages/b1/b1e00454-f9b1-446a-88c8-aa06d7ebc183.pdf#:~:text=,product%20problems%2C%20please%20contact))), though it's rare you'll need it if you take basic care of the pan. | [Amazon](https://www.amazon.com/dp/B00006JSUA/ref=nosim?tag=buywhoa-20) |
+| Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible 100% cast iron. This skillet can literally last *generations* – one Redditor restoring an 1850s cast iron pan noted, *"a cast iron pan will last generations"* ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). Lodge's modern pans are no different. They come pre-seasoned, and the seasoning only gets better and more non-stick with use. Unlike cheap pans that warp or coatings that peel, cast iron actually improves over time. It handles any heat source (stovetop, oven, grill, campfire) and can be revived even if rusted. Many people are still using Lodge pans handed down from grandparents – a true buy-it-for-life item ([Restoring a cast iron pan from 1850 : r/oddlysatisfying](https://www.reddit.com/r/oddlysatisfying/comments/17vsu7n/restoring_a_cast_iron_pan_from_1850/#:~:text=%E2%80%A2)). And Lodge stands behind their quality (they unofficially assist customers with issues ([[PDF] There is not a written warranty for Lodge Cast Iron cookware](https://images.thdstatic.com/catalog/pdfImages/b1/b1e00454-f9b1-446a-88c8-aa06d7ebc183.pdf#:~:text=,product%20problems%2C%20please%20contact))), though it's rare you'll need it if you take basic care of the pan. | [Amazon](https://www.amazon.com/dp/B00006JSUA/ref=nosim?tag=buywhoa-20) |
 | Lodge Blacklock Cast Iron Skillet | $$ | $90 | A lighter version of the classic Lodge skillet, this pan replicates antique cast iron with a triple seasoned, super nonstick surface. | [Amazon](https://www.amazon.com/dp/B08C9FHFXH/ref=nosim?tag=buywhoa-20) |
 | Field Company Cast Iron Skillet | $$$ | $165 | This skillet is lightweight, easy to maneuver, and built to last for generations. | [Amazon](https://www.amazon.com/dp/B09NXTH8NZ/ref=nosim?tag=buywhoa-20) |
 | Stargazer Cast Iron Skillet | $$$ | $115 | Lightweight with an easy-pour edge, this skillet is extremely nonstick and easy to clean. | [Amazon](https://www.amazon.com/dp/B07YVPZT8G/ref=nosim?tag=buywhoa-20) |
