--- a/app/content/categories/knives.mdx
+++ b/app/content/categories/knives.mdx
@@ -14,10 +14,10 @@ priceRanges:
 
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|------------------|-------------|
-| Victorinox Fibrox Pro Chef's Knife | $$ | $45 | A famously durable, workhorse knife beloved by culinary pros. Its high-carbon stainless steel blade and grippy Fibrox handle are designed for **intense daily use** – many professional kitchens issue this knife because it lasts so long ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=Durable%2C%20ergonomic%2C%20easy%20to%20sharpen%2C,often%20recommended%20for%20professional%20kitchens)). | [Amazon](https://www.amazon.com/dp/B000638D32/ref=nosim?tag=buywhoa-20) |
+| Victorinox Fibrox Pro Chef's Knife | $$ | $45 | A famously durable, workhorse knife beloved by culinary pros. Its high-carbon stainless steel blade and grippy Fibrox handle are designed for intense daily use – many professional kitchens issue this knife because it lasts so long ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=Durable%2C%20ergonomic%2C%20easy%20to%20sharpen%2C,often%20recommended%20for%20professional%20kitchens)). | [Amazon](https://www.amazon.com/dp/B000638D32/ref=nosim?tag=buywhoa-20) |
 | Mercer Culinary Renaissance 8-Inch Forged Chef's Knife | $$ | $45 | Forged from a single piece of high-carbon German steel, this knife is built very much like the expensive German knives (Wusthof, Henckels) but at a fraction of the cost. It's *often used in culinary schools*, which means it's made to endure heavy daily training use by students ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://www.amazon.com/dp/B002R1CGV6/ref=nosim?tag=buywhoa-20) |
 | Zwilling J.A. Henckels Professional S 8-inch Chef's Knife | $$$ | $99 | A classic German chef's knife that's been proven over decades. It's precision-forged from their proprietary high-carbon stainless and then ice-hardened (FRIODUR) for extra durability and edge retention ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://www.amazon.com/dp/B00004RFMT/ref=nosim?tag=buywhoa-20) |
 | Tojiro DP 8.2 in. Gyutoh Chef's Knife | $$$ | $86 | A Japanese workhorse knife with a VG10 core that offers exceptional sharpness *and* durability. The Tojiro DP series is famous as a gateway into Japanese knives because it's robust and well-made. The blade is a hardened stainless steel sandwiched in softer steel for toughness ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://www.amazon.com/dp/B000UAPQEA/ref=nosim?tag=buywhoa-20) |
-| Shun Classic 8 in. Chef's Knife | $$$ | $130 | A heirloom-quality Japanese knife made by hand with 32-layer Damascus cladding and a VG-MAX super steel core. Shun's craftsmanship is top-notch – these knives are **extremely sharp** and hold an edge impressively long, thanks to the hard steel | ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://amzn.to/3CXOYrE) |
+| Shun Classic 8 in. Chef's Knife | $$$ | $130 | A heirloom-quality Japanese knife made by hand with 32-layer Damascus cladding and a VG-MAX super steel core. Shun's craftsmanship is top-notch – these knives are extremely sharp and hold an edge impressively long, thanks to the hard steel | ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://amzn.to/3CXOYrE) |
 | Miyabi Birchwood SG2 8.5 in. Gyutoh Chef's Knife | $$$$ | $250 | An ultra-premium Japanese knife with a blade made of SG2 micro-carbide powder steel at ~63 HRC hardness. In plain terms, it's one of the sharpest and hardest chef's knives you can buy ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=)). | [Amazon](https://amzn.to/4k14HXE) |
 | Global G-2 8 in. Classic Chef's Knife | $$$ | $100 | A modern classic from Japan, the Global G-2 is a one-piece stainless steel knife that is famously lightweight, balanced, and surprisingly durable. Its Cromova 18 steel blade (~56-58 HRC) is hard enough to take a sharp edge yet tough and flexible enough to avoid chipping ([Kitchen Knife | BuyWhoa](https://buywhoa.com/categories/knives#:~:text=Global%20G,Chef%27s%20Knife)). | [Amazon](https://www.amazon.com/dp/B00005OL44/ref=nosim?tag=buywhoa-20) |
