--- a/app/content/categories/pillow.mdx
+++ b/app/content/categories/pillow.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 | Product Name | Price Tier | Price Range | Why It's BuyWhoa | Link |
 |-------------|------------|-------------|------------------|------|
-| Coop Home Goods Original Pillow | $$ | $50-100 | A wildly popular **memory foam** pillow that's built to last. It's filled with cross-cut foam pieces and microfiber, and comes **fully adjustable** – you can add or remove fill to maintain ideal support over time. The high-density foam is CertiPUR-US certified and holds up well; many users report their Coop pillow staying supportive for **3-5+ years** without clumping (just give it a periodic fluff). The pillow's cover is a durable Lulltra™ fabric (bamboo-derived rayon and polyester) that is breathable and washable. With its replaceable foam (Coop even sells extra fill), this pillow can be refreshed rather than replaced, making it a long-term favorite for all sleep positions. | [Amazon](https://www.amazon.com/Coop-Home-Goods-Memory-Foam-Pillow-For-Side-Back-Stomach-Sleeper/dp/B00EINBSEW?tag=buywhoa-20) |
-| Z by Malouf Talalay Latex Pillow | $$ | $50-100 | A **natural latex** pillow renowned for its durability and consistent support. Talalay latex doesn't compress or lose shape like standard foam – it can maintain its elasticity for **5-7 years or more**. This pillow has a pincore design (ventilation holes) which keeps it breathable and prevents the material from crumbling over time. Users love that it **"consistently holds its shape"** and never needs fluffing. It comes with a removable cotton cover and is naturally resistant to dust mites and mold. For those seeking a pillow that won't go flat for years, a quality latex pillow like this offers a superb balance of longevity and neck support. | [Amazon](https://www.amazon.com/MALOUF-Infused-Talalay-Pillow-Support/dp/B01IUC9GPO?tag=buywhoa-20) |
-| Pacific Coast Double DownAround Pillow | $$$ | $100-200 | A **goose down and feather** pillow engineered for durability. This pillow-in-a-pillow design uses an inner core of feathers for resilience and an outer layer of 75% down for plush comfort. The result is a pillow that retains loft and support much longer than an all-down pillow – the feather core provides structure so it won't flatten out. High-quality down pillows can easily last **10-15 years with proper care**. It has a 100% cotton barrier weave cover to keep the fill contained. Many hotels use these pillows because of their longevity. With occasional fluffing and use of a protector, this pillow can provide luxurious sleep for a decade or more. | [Amazon](https://www.amazon.com/Pacific-Coast-Standard-Pillow-Pillows/dp/B0027USND2?tag=buywhoa-20) |
-| Eiderdown Luxury Pillow | $$$$ | $200+ | The ultimate **down pillow**, filled with rare Icelandic eiderdown. Eiderdown is the softest and most insulating down in the world, plucked sustainably from eider duck nests. An eiderdown pillow is an investment piece – often hand-sewn with a silk or high-thread-count cotton shell. In terms of durability, eiderdown clusters are supremely resilient; a high-quality eiderdown pillow can **last for decades** (10-20+ years) with proper care, far outlasting ordinary pillows. It provides a uniquely cloud-like, adaptive support that **maintains its loft night after night**. This pillow is for those seeking an heirloom-quality item – the kind of pillow that comes with a pedigree and can be passed down, all while delivering dreamy sleep for years. | [Plumeria Bay](https://www.plumeriabay.com/pillows/standard-eiderdown-pillows-eps.aspx) |
+| Coop Home Goods Original Pillow | $$ | $50-100 | A wildly popular memory foam pillow that's built to last. It's filled with cross-cut foam pieces and microfiber, and comes fully adjustable – you can add or remove fill to maintain ideal support over time. The high-density foam is CertiPUR-US certified and holds up well; many users report their Coop pillow staying supportive for 3-5+ years without clumping (just give it a periodic fluff). The pillow's cover is a durable Lulltra™ fabric (bamboo-derived rayon and polyester) that is breathable and washable. With its replaceable foam (Coop even sells extra fill), this pillow can be refreshed rather than replaced, making it a long-term favorite for all sleep positions. | [Amazon](https://www.amazon.com/Coop-Home-Goods-Memory-Foam-Pillow-For-Side-Back-Stomach-Sleeper/dp/B00EINBSEW?tag=buywhoa-20) |
+| Z by Malouf Talalay Latex Pillow | $$ | $50-100 | A natural latex pillow renowned for its durability and consistent support. Talalay latex doesn't compress or lose shape like standard foam – it can maintain its elasticity for 5-7 years or more. This pillow has a pincore design (ventilation holes) which keeps it breathable and prevents the material from crumbling over time. Users love that it "consistently holds its shape" and never needs fluffing. It comes with a removable cotton cover and is naturally resistant to dust mites and mold. For those seeking a pillow that won't go flat for years, a quality latex pillow like this offers a superb balance of longevity and neck support. | [Amazon](https://www.amazon.com/MALOUF-Infused-Talalay-Pillow-Support/dp/B01IUC9GPO?tag=buywhoa-20) |
+| Pacific Coast Double DownAround Pillow | $$$ | $100-200 | A goose down and feather pillow engineered for durability. This pillow-in-a-pillow design uses an inner core of feathers for resilience and an outer layer of 75% down for plush comfort. The result is a pillow that retains loft and support much longer than an all-down pillow – the feather core provides structure so it won't flatten out. High-quality down pillows can easily last 10-15 years with proper care. It has a 100% cotton barrier weave cover to keep the fill contained. Many hotels use these pillows because of their longevity. With occasional fluffing and use of a protector, this pillow can provide luxurious sleep for a decade or more. | [Amazon](https://www.amazon.com/Pacific-Coast-Standard-Pillow-Pillows/dp/B0027USND2?tag=buywhoa-20) |
+| Eiderdown Luxury Pillow | $$$$ | $200+ | The ultimate down pillow, filled with rare Icelandic eiderdown. Eiderdown is the softest and most insulating down in the world, plucked sustainably from eider duck nests. An eiderdown pillow is an investment piece – often hand-sewn with a silk or high-thread-count cotton shell. In terms of durability, eiderdown clusters are supremely resilient; a high-quality eiderdown pillow can last for decades (10-20+ years) with proper care, far outlasting ordinary pillows. It provides a uniquely cloud-like, adaptive support that maintains its loft night after night. This pillow is for those seeking an heirloom-quality item – the kind of pillow that comes with a pedigree and can be passed down, all while delivering dreamy sleep for years. | [Plumeria Bay](https://www.plumeriabay.com/pillows/standard-eiderdown-pillows-eps.aspx) |
