--- a/app/content/categories/tableware.mdx
+++ b/app/content/categories/tableware.mdx
@@ -18,14 +18,14 @@ priceRanges:
 | Gibson Soho Lounge Round Reactive Glaze Stoneware Dinnerware Set | $$ | $38.75 | This set is made of thick stoneware with a gorgeous reactive glaze finish – each piece is unique in color pattern. Stoneware is known for its durability; the plates and bowls are hefty and resistant to chipping. | [Amazon](https://amzn.to/4hGk3PL) |
 | Amazon Basics 18-Piece White Dinnerware Set | $$ | $39.66 | Don't let the simple appearance fool you – this is *durable stoneware* meant for constant use. Many dorms and first apartments choose this set because it's inexpensive, but it ends up lasting well beyond college. | [Amazon](https://amzn.to/3Qp8wZ4) |
 | American Atelier 16pc Stoneware Two-Tone Dinnerware Set | $$$ | $96.75 | A modern two-tone design made with reliable stoneware that's built to last. Stoneware is on the heavier side and can absorb shocks better than delicate china, so these plates and bowls are great for everyday meals. | [Target](https://amzn.to/4hK6Llo) |
-| World Market Ceramic Stacked 12 Piece Dinnerware Set | $$ | $12.99 | An incredibly affordable set that's designed to save space by nesting together. Despite the low price, the pieces are **fully functional and durable** for everyday use. | [World Market](https://www.worldmarket.com/p/stacked-ceramic-12-piece-dinnerware-set-102628.html) |
+| World Market Ceramic Stacked 12 Piece Dinnerware Set | $$ | $12.99 | An incredibly affordable set that's designed to save space by nesting together. Despite the low price, the pieces are fully functional and durable for everyday use. | [World Market](https://www.worldmarket.com/p/stacked-ceramic-12-piece-dinnerware-set-102628.html) |
 | Lenox French Perle Dinnerware Set | $$$ | $75-100 | Elegant and durable, this Lenox set offers the best of both worlds. It's made of high-quality porcelain that's chip-resistant, and Lenox offers a *lifetime breakage replacement program*. | [Lenox](https://amzn.to/4gMz552) |
 | Villeroy & Boch MetroChic Dinnerware Set | $$$$ | $280 | This is high-fired premium porcelain from one of Europe's oldest tableware makers, Villeroy & Boch. Their porcelain is known to be exceptionally durable and flawlessly finished. | [Villeroy & Boch](https://www.villeroy-boch.com/p/metrochic-dinnerware-set-1046527060/) |
 | Mikasa Italian Countryside Dinnerware Set | $$$ | $120 | Mikasa's Italian Countryside is a classic pattern that has proven itself over the years. The stoneware is thick and hardy – great for families. | [Mikasa](https://amzn.to/4i4TIuC) |
 | Williams Sonoma Open Kitchen Dinnerware | $$$ | $32.50 | Williams Sonoma's Open Kitchen line is intended to deliver restaurant-quality basics – and their dinnerware meets that mark. Made from classic white porcelain, these pieces are fired for durability and have a chip-resistant glaze. | [Williams Sonoma](https://amzn.to/4i3pGY4) |
-| Hawkins New York Dinnerware | $$$$ | $280 | Hawkins New York offers trendy, minimalist designs handmade by artisans. This stoneware set combines that aesthetic appeal with **serious durability**. | [Hawkins](https://www.hawkinsnewyork.com/products/essential-dinnerware-16-piece-set-mustard) |
-| Hermès Cheval d'Orient Dinnerware | $$$$$ | $265+ | A true luxury heirloom set. Each piece of Hermès porcelain is **handcrafted in France** (Limoges) with exquisite detail and then hand-painted with equestrian-themed art. | [Gearys](https://www.gearys.com/hermes-cheval-d-orient-dinnerware.html) |
+| Hawkins New York Dinnerware | $$$$ | $280 | Hawkins New York offers trendy, minimalist designs handmade by artisans. This stoneware set combines that aesthetic appeal with serious durability. | [Hawkins](https://www.hawkinsnewyork.com/products/essential-dinnerware-16-piece-set-mustard) |
+| Hermès Cheval d'Orient Dinnerware | $$$$$ | $265+ | A true luxury heirloom set. Each piece of Hermès porcelain is handcrafted in France (Limoges) with exquisite detail and then hand-painted with equestrian-themed art. | [Gearys](https://www.gearys.com/hermes-cheval-d-orient-dinnerware.html) |
 | Ginori 1735 Oriente Italiano Dinnerware | $$$$$ | $140+ | Handcrafted in Italy by Richard Ginori (est. 1735), this dinnerware is both an art piece and functional set. The Oriente Italiano pattern is known for its vibrant colors and floral-inspired motifs. | [Gearys](https://www.ginori1735.com/us/en/ginori-oriente-italiano-newyork) |
 | Bernardaud Augusta Dinnerware | $$$$ | $90+ | Bernardaud is a prestigious French porcelain house from Limoges, and the Augusta pattern showcases delicate florals on fine white porcelain. | [Gearys](https://www.gearys.com/dining-entertaining/dinnerware/bernardaud-augusta-dinnerware) |
-| Made In The Tabletop Set Complete | $$$ | $99.75 | Made In, known for their cookware, brought the same philosophy to dinnerware – professional quality for home use. This set is made of **chip-resistant glazed porcelain**. | [Made In](https://amzn.to/4gJ3Gk3) |
-| Fable Home Ceramic Dinnerware Set | $$$$ | $198.50 | Ethically made by artisans, this stoneware/ceramic set from Fable is designed to be both beautiful and **highly durable**. | [Food52](https://amzn.to/3X22L7i) |
+| Made In The Tabletop Set Complete | $$$ | $99.75 | Made In, known for their cookware, brought the same philosophy to dinnerware – professional quality for home use. This set is made of chip-resistant glazed porcelain. | [Made In](https://amzn.to/4gJ3Gk3) |
+| Fable Home Ceramic Dinnerware Set | $$$$ | $198.50 | Ethically made by artisans, this stoneware/ceramic set from Fable is designed to be both beautiful and highly durable. | [Food52](https://amzn.to/3X22L7i) |
